ch7-ingress/labs/lab01/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: captainyun/k8s-labs-todo-backend:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
