ch7-ingress/labs/lab01/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  selector:
    app: mysql-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
