ch7-ingress/labs/lab01/mysql-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  clusterIP: None  # Headless Service
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
